tinyc/test/bad/assert-struct.c
struct s
{
    int x;
};

int main()
{
    struct s s;
    assert( s );
    return 0;
}


